--- a/app/views/mail.scala.html
+++ b/app/views/mail.scala.html
@@ -1,3 +1,5 @@
+@(mails: List[Html])
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +10,14 @@
 
 <body>
 
-<h1>email list</h1>
+<h1>BIT SPAM</h1>
+
+<ul id="mails" title="Interesting mails">
+    @for(mail <- mails){
+        <li> @mail </li>
+    }
+</ul>
+
 
 </body>
 
