--- a/app/views/mail.scala.html
+++ b/app/views/mail.scala.html
@@ -1,24 +1,31 @@
-@(mails: List[Html])
+@*TODO user should be able to edit the mail and update it*@
+@import model.domain.Email
+@import play.twirl.api.Html
+@(mail: Email)
 
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="pl">
+        <head>
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Mail list</title>
-</head>
+            <title>Bit Spamm</title>
 
-<body>
+                <!-- Bootstrap -->
+            <link href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+            <link href="@routes.Assets.at("bootstrap/css/bootstrap-theme.min.css")" rel="stylesheet">
 
-<h1>BIT SPAM</h1>
+        </head>
+        <body>
 
-<ul id="mails" title="Interesting mails">
-    @for(mail <- mails){
-        <li> @mail </li>
-    }
-</ul>
+            <div class="jumbotron">
+                @Html(mail.content)
+            </div>
 
 
-</body>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+            <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
 
-</html>
+        </body>
+    </html>
